anubandha - 8 pages are sent to another proof

--- a/tex-for-print/anubandha-4.tex
+++ b/tex-for-print/anubandha-4.tex
@@ -19,157 +19,151 @@
 %\hline
 \endfoot
 \endlastfoot
-{\bf 1. atha.shiKA.} & athavaRshiKoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& saMgArx. paM. jagadiVsha shAsitxrXV & moVtilAlf banArasidAsf\newline dehali, 1980\\
-{\bf 2. atha.shirasf.} & athavaRshira upaniSatf\newline (upaniSatasxMgarxhaH) &-& saMgArx. paM. jagadiVsha shAsitxrXV & moVtilAlf banArasidAsf\newline dehali, 1980\\
-{\bf 3. aBi.shA.} & aBijAcnxna shAkuMtala (kAlidAsa)\newline (kananxDAnuvAda sahita) &-& (saM.) porx. ke.Ti. pAMDuraMgi &  beMgaLUru vishavxvidAyxlaya\newline beMgaLUru, 1978\\
-{\bf 4. a.koV.} &  amarakoVsha (amarasiMha)\newline (sudhA vAyxKoyxVpeVtaH) &-& (vAyx) shirxV BAnoVji diVkiSxta & cwKaMbA saMsakxqqta parxtiSAThxna, navadehali (divx.mu), 1978\\
-{\bf 5. amaq.Bi.} & amaqtabiMdUpaniSatf\newline (upaniSatasxMgarxhaH) &-& saMgArx. paM. jagadiVsha shAsitxrXV & moVtilAlf banArasidAsf\newline  dehali, 1980\\
+{\bf 1. atha.shiKA.} & athavaRshiKoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& saM. paM. jagadiVsha shAsitxrXV & moVtilAlf banArasidAsf\newline dehali, 1980\\
+{\bf 2. atha.shirasf.} & athavaRshira upaniSatf\newline (upaniSatasxMgarxhaH) &-& saM. paM. jagadiVsha shAsitxrXV & moVtilAlf banArasidAsf\newline dehali, 1980\\
+{\bf 3. aBi.shA.} & aBijAcnxna shAkuMtala (kAlidAsa)\newline (kananxDAnuvAda sahita) &-& saM. porx. ke.Ti. pAMDuraMgi &  beMgaLUru vishavxvidAyxlaya\newline beMgaLUru, 1978\\
+{\bf 4. a.koV.} &  amarakoVsha (amarasiMha)\newline (sudhA vAyxKoyxVpeVtaH) &-& vAyx. shirxV BAnoVji diVkiSxta & cwKaMbA saMsakxqqta parxtiSAThxna, navadehali (divx.mu), 1978\\
+{\bf 5. amaq.Bi.} & amaqtabiMdUpaniSatf\newline (upaniSatasxMgarxhaH) &-& saM. paM. jagadiVsha shAsitxrXV & moVtilAlf banArasidAsf\newline  dehali, 1980\\
 {\bf 6. aSATx.} & aSATxdhAyxyiV sUtarxpATha\newline (pANini) &-& (saM.) sAvxmiV parxhAlxda giri veVdAMtakeVsari & kaqSaNxdAsa akAdemi\newline dehali, (divx.mu)\newline 1987\\
-{\bf 7. a.viV.sA.saM.} &  anAdiviVrasheYvasArasaMgarxha (BA-1) (kananxDa vAyxKAyxnasahita) &-& saMpAdaneya sidadhxviVraNaNx shivayoVgi\newline (saM.) ji.e. shivaliMgayayx & basava samiti\newline beMgaLUru, 1999\\
+{\bf 7. a.viV.sA.saM.} &  anAdiviVrasheYvasArasaMgarxha (BA-1) (kananxDa vAyxKAyxnasahita) &-& saMpAdaneya sidadhxviVraNaNx shivayoVgi\newline saM. ji.e. shivaliMgayayx & basava samiti\newline beMgaLUru, 1999\\
 %2. & anAdivivrasheYvasArasaMgarxha : (BA-1) &-& saM. maNUra maThAdhayxkaSx malilxkAjuRnashAsitxrXV, viVrasheYva liMgibArxhamxNa garxMthamAlA, soVlApura, 1905\\
-{\bf 8. a.viV.sA.saM.} & anAdiviVrasheYvasArasaMgarxha (BA-2) (kananxDa vAyxKAyxnasahita) &-& (parx.saM.) DA. si. shivakumArasAvxmi & viVrasheYva sAhitayx parxtiSAThxna\newline viBUtipura maTha\newline beMgaLUru, 2005\\
+{\bf 8. a.viV.sA.saM.} & anAdiviVrasheYvasArasaMgarxha (BA-2) (kananxDa vAyxKAyxnasahita) &-& parx.saM. DA. si. shivakumArasAvxmi & viVrasheYva sAhitayx parxtiSAThxna\newline viBUtipura maTha\newline beMgaLUru, 2005\\
 {\bf 9. a.sA.} & anuBavasAraH &-& nijaguNa shivayoVgi & kananxDa matutx saMsakxqqti nideRVshanAlaya\newline beMgaLUru\\
 %3. & anuBavasUtarx (mAyideVva)\newline (hiMdiV vAyxKAyx sahita) &-& saM. varxjavalalxBadivxveVdiV, sheYvaBArati shoVdha parxtiSAThxna, vArANasi, 1998\\
-{\bf 10. a.sU.} & anuBavasUtarxmf (mAyideVva)\newline (kananxDAnuvAda sahita) &-& (saM.) DA. si. shivakumArasAvxmi & viVrasheYva anusaMdhAna saMsAthxna\newline beMgaLUru 2003\\
+{\bf 10. a.sU.} & anuBavasUtarxmf (mAyideVva)\newline (kananxDAnuvAda sahita) &-& saM. DA. si. shivakumArasAvxmi & viVrasheYva anusaMdhAna saMsAthxna\newline beMgaLUru 2003\\
 {\bf 11. akaSx.mA.u.} & akaSxmAlikoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& paM. jagadiVsha shAsitxrXV & moVtilAlf banArasidAsf\newline dehali, 1980\\
-{\bf 12. A.sutx.} & AtAmxpaRNasutxti (apapxyayx diVkiSxta)\newline (bAlaboVdhiniV vAyxKAyxnasahita) &-& (vAyx) shirxV shivAnaMda yati & shirxVmadapapxyayxdiVkiSxta garxMthAvali parxkAshana samiti, sikaMdarAbAdf\newline 1980\\
+{\bf 12. A.sutx.} & AtAmxpaRNasutxti (apapxyayx diVkiSxta)\newline (bAlaboVdhiniV vAyxKAyxnasahita) &-& vAyx. shirxV shivAnaMda yati & shirxVmadapapxyayxdiVkiSxta garxMthAvali parxkAshana samiti, sikaMdarAbAdf\newline 1980\\
 %{\bf 13. I.u.} & IshAvAsoyxVpaniSatf &-& & rAmakaqSaNx maTha\newline  madArxsf, 1948\\
-{\bf 13. u.garx.} & upaniSatasxMgarxhaH &-& (saM.) paM. jagadiVsha shAsitxrXV & moVtilAlf banArasidAsf\newline dehali, 1980\\
+{\bf 13. u.garx.} & upaniSatasxMgarxhaH &-& saM. paM. jagadiVsha shAsitxrXV & moVtilAlf banArasidAsf\newline dehali, 1980\\
 {\bf 14. u.ma.} & upaniSadAvxkayxmahAkoVshaH &-& shirxV gajAnana shaMBu sAdhale & cwKaMbA vidAyxBavana\newline vAraNAsi, 1990\\
 %{\bf 16. u.vA.A.} & utatxra vAtUlAgamaH &-& & \\
 %{\bf 17. Qu.veV.} & QugevxVdaH &-& veYdika saMshoVdhana maMDali & puNe, 1941\\
 %{\bf 18. ai.u.} & aitareVyoVpaniSatf &-& shirxVrAmakaqSANxsharxma & meYsUru, 1954 (nA.mu. 1984)\\
-{\bf 15. kaTha.u.} & kaThoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM.) paM. jagadiVsha shAsitxrXV & moVtilAlf banArasidAsf\newline dehali, 1980\\
+{\bf 15. kaTha.u.} & kaThoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& saM. paM. jagadiVsha shAsitxrXV & moVtilAlf banArasidAsf\newline dehali, 1980\\
 %20. & kAraNAgama (kirxyApAda)\newline (hiMdiVBASAnuvAda sahita) &-& saM. porx. rAmacaMdarxpAMDeVya sheYva BAratiV shoVdha parxtiSAThxna, vArANasi, 1994\\
 {\bf 16. kA.A.ka.} & kAraNAgamaH (kirxyApAda)\newline (kananxDAnuvAda sahita) &-& DA. malilxkAjuRna paraDiDx & viVrasheYva anusaMdhAna saMsAthxna\newline beMgaLUru, 1999\\
-{\bf 17. kAmika.} & kAmikAgamaH\newline (shivAgama swraBAMtagaRta) &-& (saM.) vidAvxnf eM.ji. naMjuMDArAdhayx & ja.ca.ni. adhayxyana piVTha matutx saMshoVdhanA saMsethx\newline beMgaLUru, 1985\\
-{\bf 18. kA.ru.u.} & kAlAginxrudorxVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM.) paM. jagadiVsha shAsitxrXV & moVtilAlf banArasidAsf\newline dehali, 1980\\
-{\bf 19. kA.vi.} & kAlidAsana vikarxmoVvaRshiVyamf &-& (saM) DA. eM. shivakumAra sAvxmi & parxsArAMga beMgaLUru vishavxvidAyxlaya\newline beMgaLUru\\
+{\bf 17. kAmika.} & kAmikAgamaH\newline (shivAgama swraBAMtagaRta) &-& saM. vidAvxnf eM.ji. naMjuMDArAdhayx & ja.ca.ni. adhayxyana piVTha matutx saMshoVdhanA saMsethx\newline beMgaLUru, 1985\\
+{\bf 18. kA.ru.u.} & kAlAginxrudorxVpaniSatf\newline (upaniSatasxMgarxhaH) &-& saM. paM. jagadiVsha shAsitxrXV & moVtilAlf banArasidAsf\newline dehali, 1980\\
+{\bf 19. kA.vi.} & kAlidAsana vikarxmoVvaRshiVyamf &-& saM. DA. eM. shivakumAra sAvxmi & parxsArAMga beMgaLUru vishavxvidAyxlaya\newline beMgaLUru\\
 {\bf 20. ki.A.} & kiraNAgamaH\newline (taMtarxsaMgarxhaH) &-& hUTagiVmaTha & soVlApura, 1914\\
 {\bf 21. kU.pu.} & kUmaR purANamf &-& joVSi ke.elf. shAsitxrX & parimaLa pabilxkeVSanfsx\newline navadehali\\
-{\bf 22. keV.u.} & keVnoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM.) paM. jagadiVsha shAsitxrXV & moVtilAlf banArasidAsf\newline dehali, 1980\\
+{\bf 22. keV.u.} & keVnoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& saM. paM. jagadiVsha shAsitxrXV & moVtilAlf banArasidAsf\newline dehali, 1980\\
 {\bf 23. keY.u.} & keYvaloyxVpaniSatf\newline (sadAshivaBASoyxVpeVta) &-& shirxV sadAshiva shivAcAyaRH & parxboVdha pusatxka mAlA, beMgaLUru\newline 1951\\
 {\bf 24. keY.sA.} & keYvalayxsAraH &-& virakatx toVMTadAyaR & pArxcayx vidAyx saMshoVdhanAlaya\newline meYsUru, 1988\\
 {\bf 25. kirx.sA.} & \hbox{kirxyAsAraH} &-& niVlakaMTha shivAcAyaR\newline (BA-1, 2, 3) & pArxcayx vidAyx saMshoVdhanAlaya\newline meYsUru, 1954\newline 1957, 1958\\
 {\bf 26. gw.kA.} & gwDapAdakArikA\newline (mAMDUkoyxVpaniSatf BASayx) &-& sAvxmi cinamxyAnaMda & cinamxya parxkAshana\\
 %26. & caMdarxjAcnxnAgama\newline (kirxyApAda-cayARpAda)\newline (AMgalxBASAnuvAda sahita) &-& saM. DA. ramAGoVSf, sheYva BArati shoVdha parxtiSAThxna, vArANasi, 1995\\
-{\bf 27. caM.A.} & caMdarxjAcnxnAgamaH\newline (kirxyApAda-cayARpAda)\newline (kananxDAnuvAda sahita) &-& (saM.) DA. eM. shivakumArasAvxmi & viVrasheYva anusaMdhAna saMsAthxna\newline beMgaLUru, 2002\\
+{\bf 27. caM.A.} & caMdarxjAcnxnAgamaH\newline (kirxyApAda-cayARpAda)\newline (kananxDAnuvAda sahita) &-& saM. DA. eM. shivakumArasAvxmi & viVrasheYva anusaMdhAna saMsAthxna\newline beMgaLUru, 2002\\
 {\bf 28. CAM.u.} & CAMdoVgoyxVpaniSatf &-& sAvxmi AdideVvAnaMda & shirxV rAmakaqSANxsharxma\newline meYsUru, 1995\\
-{\bf 29. jA.u.} & jAbAloVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAlf banArasidAsf\newline dehali, 1980\\
+{\bf 29. jA.u.} & jAbAloVpaniSatf\newline (upaniSatasxMgarxhaH) &-& saM. paM. jagadiVsha shAsitxrXV & moVtilAlf banArasidAsf\newline dehali, 1980\\
 %{\bf 34. jAcnx.A.} & jAcnxnoVtatxrAgama &-& & \\
 {\bf 30. ta.parxkA.} & tatatxvXparxkAshikA\,(aGoVrashivAcAyaR)\newline (BoVjakaqtavAyxKAyxna) &-& vidAvxnf bi. rAjasheVKarayayx & viVrasheYva anusaMdhAna saMsAthxna\newline beMgaLUru, 2010\\
 {\bf 31. ta.parxdiV.} & tatatxvXparxdiVpikA\newline (sidAdhxMta shiKAmaNi saMsakxqqta vAyxKeyx) &-& (saM) DA. ecf.pi. malelxVdeVvaru & pArxcayx vidAyx saMshoVdhanAlaya\newline meYsUru\\
-{\bf 32. teV.u.} & teVjoVbiMdUpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAlf banArasidAsf\newline dehali, 1980\\
-{\bf 33. teY.A.} & teYtitxriVyAraNayxkamf &-& AnaMdAsharxma siVriVsf & puNe\\
+{\bf 32. teV.u.} & teVjoVbiMdUpaniSatf\newline (upaniSatasxMgarxhaH) &-& saM. paM. jagadiVsha shAsitxrXV & moVtilAlf banArasidAsf\newline dehali, 1980\\
 {\bf 34. teY.u.} & teYtitxriVyoVpaniSatf &-& sAvxmi AdideVvAnaMda & shirxV rAmakaqSANxsharxma\newline meYsUru, 1993\\
 {\bf 35. da.u.} & dakiSxNAmUtuyxRpaniSatf\newline (upaniSatasxMgarxhaH) &-& paM. jagadiVsha shAsitxrXV & moVtilAlf banArasidAsf\newline dehali, 1980\\
 %{\bf 41. dAvx.shi.kirx.} & dAvxdashashivaliMgAcaRnakirxyA &-& & \\
 %{\bf 42. diVkASx.parx.} & diVkASxparxkaraNamf &-& & \\
-{\bf 36. deVviV.A.} & deVviVkAloVtatxrAgamaH &-& (saM) varxjavalalxBa divxveVdi & sheYvaBAratiV shoVdha parxtiSAThxna, vArANasi\newline 2000\\
+{\bf 36. deVviV.A.} & deVviVkAloVtatxrAgamaH &-& saM. varxjavalalxBa divxveVdi & sheYvaBAratiV shoVdha parxtiSAThxna, vArANasi\newline 2000\\
 {\bf 37. nAda.u.} & nAdabiMdUpaniSatf\newline (upaniSatasxMgarxhaH) &-& paM. jagadiVsha shAsitxrXV & moVtilAlf banArasidAsf\newline dehali, 1980\\
 {\bf 38. nirukatx.} & nirukatxmf (yAsakx)\newline (niGaMTu sahita) &-& DA. lakaSxmXNf savxrUpf & moVtilAlf banArasidAsf\newline dehali, 1984\\
 {\bf 39. niV.ru.u.} & niVlarudorxVpaniSatf\newline (upaniSatasxMgarxhaH) &-& paM. jagadiVsha shAsitxrXV & moVtilAlf banArasidAsf\newline dehali, 1980\\
-{\bf 40. paMDi.ca.} & paMDitArAdhayx caritamf\newline (gururAja kavi)\newline (kananxDAnuvAda sahita) &-& (saM) enf.Arf. karibasava shAsitxrXV & viVrasheYva garxMtha parxkAshikA, meYsUru\newline BAga-1 (1908)\newline BAga-2 (1913)\\
+{\bf 40. paMDi.ca.} & paMDitArAdhayx caritamf\newline (gururAja kavi)\newline (kananxDAnuvAda sahita) &-& saM. enf.Arf. karibasava shAsitxrXV & viVrasheYva garxMtha parxkAshikA, meYsUru\newline BAga-1 (1908)\newline BAga-2 (1913)\\
 {\bf 41. paM.barx.u.} & paMcabarxhomxVpaniSatf\newline (upaniSatasxMgarxhaH) &-& paM. jagadiVsha shAsitxrXV & moVtilAlf banArasidAsf\newline dehali, 1980\\
 {\bf 42. parx.u.} & parxshonxVpaniSatf &-& sAvxmi AdideVvAnaMda & shirxVrAmakaqSaNx maTha\newline meYsUru, 1993\\
 %{\bf 50. parx.haq.} & parxtayxBijAcnxhaqdayamf &-& & kAshimxVra saMsakxqqta garxMthAvali shirxVnagara, 1911\\
-{\bf 43. parx.giV.} & parxBugiVtA (mAyideVva) &-& (saM) porx. si. mahAdeVvapapx & saMshoVdhanA koVTi\newline beMgaLUru, 2001\\
-{\bf 44. parx.jA.u.} & parxsAdajAbAloVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAlf banArasidAsf\newline dehali, 1980\\
-{\bf 45. pAra.A.} & pArameVshavxrAgamaH\newline (hiMdiV BASAnuvAda sahita) &-& (saM) paM. varxjavalalxBa divxveVdi & sheYva BAratiV shoVdha parxtiSAThxna, vArANasi\newline 1995\\
-{\bf 46. pAra.A.} & pArameVshavxrAgamaH\newline (kananxDAnuvAda sahita) &-& (saM) DA. eM. shivakumArasAvxmi & viVrasheYva anusaMdhAna saMsAthxna\newline beMgaLUru, 2000\\
+{\bf 43. parx.giV.} & parxBugiVtA (mAyideVva) &-& saM. porx. si. mahAdeVvapapx & saMshoVdhanA koVTi\newline beMgaLUru, 2001\\
+{\bf 44. parx.jA.u.} & parxsAdajAbAloVpaniSatf\newline (upaniSatasxMgarxhaH) &-& saM. paM. jagadiVsha shAsitxrXV & moVtilAlf banArasidAsf\newline dehali, 1980\\
+{\bf 45. pAra.A.} & pArameVshavxrAgamaH\newline (hiMdiV BASAnuvAda sahita) &-& saM. paM. varxjavalalxBa divxveVdi & sheYva BAratiV shoVdha parxtiSAThxna, vArANasi\newline 1995\\
+{\bf 46. pAra.A.} & pArameVshavxrAgamaH\newline (kananxDAnuvAda sahita) &-& saM. DA. eM. shivakumArasAvxmi & viVrasheYva anusaMdhAna saMsAthxna\newline beMgaLUru, 2000\\
 {\bf 47. pAshu.A.} & pAshupatAgamaH\newline (shivAgamaswraBa) &-& vidAvxnf eM.ji. naMjuMDArAdhayx & shirxV ja.ca.ni. adhayxyana piVTha, beMgaLUru\newline 1986\\
-{\bf 48. peY.u.} & peYMgaloVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAlf banArasidAsf\newline dehali, 1980\\
+{\bf 48. peY.u.} & peYMgaloVpaniSatf\newline (upaniSatasxMgarxhaH) &-& saM. paM. jagadiVsha shAsitxrXV & moVtilAlf banArasidAsf\newline dehali, 1980\\
 {\bf 49. pwSakx.A.} & pwSakxrAgamaH\newline (sidAdhxMtasheVKara) &-& porx. siVtArAma soVmayAji & meYsUru, 1901\\
-{\bf 50. baq.u.} & baqhadAraNayxkoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAlf banArasidAsf\newline dehali, 1980\\
-{\bf 51. baq.jA.u.} & baqhajAjxbAloVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAlf banArasidAsf\newline dehali, 1980\\
-{\bf 52. barx.u.} & barxhomxVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAlf banArasidAsf\newline dehali, 1980\\
+{\bf 50. baq.u.} & baqhadAraNayxkoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& saM. paM. jagadiVsha shAsitxrXV & moVtilAlf banArasidAsf\newline dehali, 1980\\
+{\bf 51. baq.jA.u.} & baqhajAjxbAloVpaniSatf\newline (upaniSatasxMgarxhaH) &-& saM. paM. jagadiVsha shAsitxrXV & moVtilAlf banArasidAsf\newline dehali, 1980\\
+{\bf 52. barx.u.} & barxhomxVpaniSatf\newline (upaniSatasxMgarxhaH) &-& saM. paM. jagadiVsha shAsitxrXV & moVtilAlf banArasidAsf\newline dehali, 1980\\
 %{\bf 61. barx.pu.} & barxhAmxMDapurANamf &-& & moVtilAlf banArasidAsf pabilxSasfR\newline  navadehali, 1983\\
-{\bf 53. barxsU.} & barxhamxsUtarxmf\newline (shirxVkaraBASayxmf) &-& (saM) DA. Ti.ji. sidadhxpApxrAdhayx & pArxcayx vidAyx saMshoVdhanAlaya\newline meYsUru\newline BAga-1, 1977,\newline BAga-2, 1978\\
+{\bf 53. barxsU.} & barxhamxsUtarxmf\newline (shirxVkaraBASayxmf) &-& saM. DA. Ti.ji. sidadhxpApxrAdhayx & pArxcayx vidAyx saMshoVdhanAlaya\newline meYsUru\newline BAga-1, 1977,\newline BAga-2, 1978\\
 %{\bf 63. Ba.giV.} & BagavadigxVtA &-& & giVtA perxsf\newline goVraKfpurf\newline 2008\\
 %{\bf 64. Ba.jA.u.} & BasamxjAbAloVpaniSatf &-& & {\rm The Shaiva Upanishads Series\newline Adyar Library and Research Centre, Madras, 1988}\\
 {\bf 54. Ba.viV.BA.} & BagavadigxVtA viVrasheYvaBASayxmf &-& DA. Ti.ji. sidadxpApxrAdhayx & baqhanamxTha\newline citarxdugaR, 1935\\
-{\bf 55. BA.pari.} & BAratiVya dashaRna pariBASAkoVsha\newline (BA-1) &-& veYjAcnxnika matutx tAMtirxka\newline shabAdxvaliV AyoVga & BArata sakARra\newline navadehali, 1999\\
-{\bf 56. makuTa.} & makuTAgamaH\newline (kirxyApAda-cayAR\-pAda)\newline (kananxDAnuvAda sahita) &-& (saM) DA. si. shivakumArasAvxmi & viVrasheYva anusaMdhAna saMsAthxna\newline beMgaLUru, 1998\\
-{\bf 57. ma.nA.u.} & mahAnArAyaNoVpaniSatf\newline (sheYvaBASayx sahita) &-& BASayx: shirxV vaqSaBeVMdarx paMDita shivAcAyaR & vishAvxrAdhayx gurukula\newline kAshiV, 1959\\
+{\bf 55. makuTa.} & makuTAgamaH\newline (kirxyApAda-cayAR\-pAda)\newline (kananxDAnuvAda sahita) &-& saM. DA. si. shivakumArasAvxmi & viVrasheYva anusaMdhAna saMsAthxna\newline beMgaLUru, 1998\\
+{\bf 56. ma.nA.u.} & mahAnArAyaNoVpaniSatf\newline (sheYvaBASayx sahita) &-& BASayx: shirxV vaqSaBeVMdarx paMDita shivAcAyaR & vishAvxrAdhayx gurukula\newline kAshiV, 1959\\
 %{\bf 69. ma.BA.} & mahABAratamf &-& & giVtA perxsf\newline goVraKapura, vi.saM. 2044\\
-{\bf 58. mahoV.u.} & mahoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf\newline dehali, 1980\\
-{\bf 59. mAM.u.} & mAMDUkoyxVpaniSatf\newline (gwDapAdakArikoVpeVtA) &-& sAvxmi AdideVvAnaMda & shirxVrAmakaqSANxsharxma\newline meYsUru, 1984\\
-{\bf 60. mAM.kA.} & mAMDUkayxkArikA &-& (saM) hari raGunAtha BAgavatf & aSeTxVkarf aMDf koV.\newline puNe, 1918\\
-{\bf 61. mAM.saM.} & mAdhayxMdina saMhitA &-& (saM) pAMDuraMga javAji & niNaRyasAgara perxsf\newline muMbayi\\
-{\bf 62. muM.u.} & muMDakoVpaniSatf &-& sAvxmi AdideVvAnaMda & shirxVrAmakaqSANxsharxma\newline meYsUru, 1957\\
-{\bf 63. maq.A.} & maqgeVMdArxgamaH\newline (shivAgama swraBAMtagaRta) &-& vidAvxnf eM.ji. naMjuMDArAdhayx & shirxV ja.ca.ni. adhayxyana piVTha, beMgaLUru\newline 1985\\
-{\bf 64. meYterxVya.} & meYterxVyuyxpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAlf banArasidAsf\newline dehali, 1980\\
-{\bf 65. yoV.A.} & yoVgajAgamaH\newline  ulelxVKa - tatatxvXparxdiVpikA &-& maritoVMTadAyaRra\newline (sidAdhxMta shiKAmaNi vAyxKAyxna) & pArxcayx vidAyx saMshoVdhanAlaya \newline meYsUru, 1995\\
+{\bf 57. mahoV.u.} & mahoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& saM. paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf\newline dehali, 1980\\
+{\bf 58. mAM.u.} & mAMDUkoyxVpaniSatf\newline (gwDapAdakArikoVpeVtA) &-& sAvxmi AdideVvAnaMda & shirxVrAmakaqSANxsharxma\newline meYsUru, 1984\\
+{\bf 59. mAM.kA.} & mAMDUkayxkArikA &-& saM. hari raGunAtha BAgavatf & aSeTxVkarf aMDf koV.\newline puNe, 1918\\
+{\bf 60. mAM.saM.} & mAdhayxMdina saMhitA &-& saM. pAMDuraMga javAji & niNaRyasAgara perxsf\newline muMbayi\\
+{\bf 61. muM.u.} & muMDakoVpaniSatf &-& sAvxmi AdideVvAnaMda & shirxVrAmakaqSANxsharxma\newline meYsUru, 1957\\
+{\bf 62. maq.A.} & maqgeVMdArxgamaH\newline (shivAgama swraBAMtagaRta) &-& vidAvxnf eM.ji. naMjuMDArAdhayx & shirxV ja.ca.ni. adhayxyana piVTha, beMgaLUru\newline 1985\\
+{\bf 63. meYterxVya.} & meYterxVyuyxpaniSatf\newline (upaniSatasxMgarxhaH) &-& saM. paM. jagadiVsha shAsitxrXV & moVtilAlf banArasidAsf\newline dehali, 1980\\
+{\bf 64. yoV.A.} & yoVgajAgamaH\newline  ulelxVKa - tatatxvXparxdiVpikA &-& maritoVMTadAyaRra\newline (sidAdhxMta shiKAmaNi vAyxKAyxna) & pArxcayx vidAyx saMshoVdhanAlaya \newline meYsUru, 1995\\
 %{\bf 78. yoV.pA.} & yoVgapAvaLi &-& & \\
-{\bf 66. yoV.su.} & yoVgasUtarxmf &-& rAmakaqSaNxmaTha & meYlApura\newline cenenxY, 2003\\
 %{\bf 80. yoV.rA.u.} & yoVgarAjoVpaniSatf &-& & \\
-{\bf 67. yoVga.shi.} & yoVgashiKoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAlf banArasidAsf\newline dehali, 1980\\
-{\bf 68. ra.vaM.} & raGuvaMshamf (kAlidAsa) &-& niNaRyasAgara perxsf & muMbayi, 1932\\
-{\bf 69. ru.u.} & rudorxVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAlf banArasidAsf\newline dehali, 1980\\
-{\bf 70. ru.haq.u.} & rudarxhaqdayoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAlf banArasidAsf\newline dehali, 1980\\
-{\bf 71. rudarx.} & rudArxdhAyxyaH (yajuveRVda) &-& veYdika saMshoVdhana maMDala & puNe\\
-{\bf 72. rudarx.jA.u.} & rudArxkaSxjAbAloVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAlf banArasidAsf\newline dehali, 1980\\
-{\bf 73. liM.u.} & liMgoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAlf banArasidAsf\newline dehali, 1980\\
-{\bf 74. liM.dhA.caM.} & liMgadhAraNacaMdirxkA\newline (naMdikeVshavxra shivAcAyaR) &-& paM. varxjavalalxBa divxveVdi & sheYvaBArati shoVdha parxtiSAThxna, vArANasi\newline 1988\\
-{\bf 75. liM.pu.} & liMgapurANamf &-& puvAvxDa veMkaTarAyf & kAMciV, 1879\\
-{\bf 76. leY.pu.} & leYMga purANamf &-& puvAvxDa veMkaTarAyf & kAMciV, 1879\\
-{\bf 77. vA.A.} & vAtulAgamaH\newline (shivAgamaswraBa) &-& vidAvxnf eM.ji. naMjuMDArAdhayx & shirxV ja.ca.ni. adhayxyana piVTha, beMgaLUru\newline 1986\\
-{\bf 78. vA.kAM.} & vAdakAMDaH\newline (viVrasheYvAnaMda caMdirxke) &-& shirxV soVmeVshavxra shAsitxrXV & shirxV jagadugxru gaMgAdhara saMsakxqqta mahApAThashAle\newline hubabxLiLx, 1936\\
+{\bf 65. yoVga.shi.} & yoVgashiKoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& saM. paM. jagadiVsha shAsitxrXV & moVtilAlf banArasidAsf\newline dehali, 1980\\
+{\bf 66. ru.u.} & rudorxVpaniSatf\newline (upaniSatasxMgarxhaH) &-& saM. paM. jagadiVsha shAsitxrXV & moVtilAlf banArasidAsf\newline dehali, 1980\\
+{\bf 67. ru.haq.u.} & rudarxhaqdayoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& saM. paM. jagadiVsha shAsitxrXV & moVtilAlf banArasidAsf\newline dehali, 1980\\
+{\bf 68. rudarx.jA.u.} & rudArxkaSxjAbAloVpaniSatf\newline (upaniSatasxMgarxhaH) &-& saM. paM. jagadiVsha shAsitxrXV & moVtilAlf banArasidAsf\newline dehali, 1980\\
+{\bf 69. liM.u.} & liMgoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& saM. paM. jagadiVsha shAsitxrXV & moVtilAlf banArasidAsf\newline dehali, 1980\\
+{\bf 70. liM.dhA.caM.} & liMgadhAraNacaMdirxkA\newline (naMdikeVshavxra shivAcAyaR) &-& paM. varxjavalalxBa divxveVdi & sheYvaBArati shoVdha parxtiSAThxna, vArANasi\newline 1988\\
+{\bf 71. liM.pu.} & liMgapurANamf &-& puvAvxDa veMkaTarAyf & kAMciV, 1879\\
+{\bf 72. leY.pu.} & leYMga purANamf &-& puvAvxDa veMkaTarAyf & kAMciV, 1879\\
+{\bf 73. vA.A.} & vAtulAgamaH\newline (shivAgamaswraBa) &-& vidAvxnf eM.ji. naMjuMDArAdhayx & shirxV ja.ca.ni. adhayxyana piVTha, beMgaLUru\newline 1986\\
+{\bf 74. vA.kAM.} & vAdakAMDaH\newline (viVrasheYvAnaMda caMdirxke) &-& shirxV soVmeVshavxra shAsitxrXV & shirxV jagadugxru gaMgAdhara saMsakxqqta mahApAThashAle\newline hubabxLiLx, 1936\\
 %{\bf 93. vAja.saM.} & vAjasaneVyiV saMhitA\newline (sakxMda purANAMtagaRta) &-& & sAvxdhAyxya maMDali\newline paraDi, mahArASaTxrX\\
-{\bf 79. vA.shu.A.} & vAtulashudAdhxgamaH (BAga-2) &-& DA. hecf.pi. malelxVdeVvaru & pArxcayx vidAyx saMshoVdhanAlaya\newline meYsUru, 1983\\
-{\bf 80. vA.saM.} & vAyaviVyasaMhitA\newline (sakxMda purANAMtagaRta) &-& KeVmarAja kaqSaNxdAsf & muMbayi, 1965\\
-{\bf 81. videyxV.saM.} & videyxVshavxrasaMhitA\newline (sakxMda purANAMtagaRta) &-& KeVmarAja kaqSaNxdAsf & muMbayi, 1965\\
-{\bf 82. visheV.parx.} & visheVSAthaR parxkAshikA (mAyideVva)\newline (kananxDAnuvAda sahita) &-& (saM) paM. veY. nAgeVsha shAsitxrXV & shirxV muruGAmaTha\newline dhAravADa, 1961\\
-{\bf 83. viV.A.u.} & viVrAgamoVtatxramf (BAga-1) &-& (saM) DA. ecf.pi. malelxVdeVvaru & pArxcayx vidAyx saMshoVdhanAlaya\newline meYsUru, 1988\\
-{\bf 84. viV.A.kw.} & viVrasheYvAcAra kwsutxBaH\newline hasatxparxti, saM. pi. 7352 &-& mwnapapx paMDita & pArxcayx vidAyx saMshoVdhanAlaya\newline meYsUru\\
-{\bf 85. viV.A.caM.} & viVrasheYvAnaMdacaMdirxkA (vAdakAMDa)\newline (maritoVMTadAyaR) &-& (saM) shirxV soVmeVshavxra shAsitxrXV & shirxV jagadugxru gaMgAdhara saMsakxqqta mahApAThashAlA\newline hubabxLiLx, 1936\\
+{\bf 75. vA.shu.A.} & vAtulashudAdhxgamaH (BAga-2) &-& DA. hecf.pi. malelxVdeVvaru & pArxcayx vidAyx saMshoVdhanAlaya\newline meYsUru, 1983\\
+{\bf 76. vA.saM.} & vAyaviVyasaMhitA\newline (sakxMda purANAMtagaRta) &-& KeVmarAja kaqSaNxdAsf & muMbayi, 1965\\
+{\bf 77. videyxV.saM.} & videyxVshavxrasaMhitA\newline (sakxMda purANAMtagaRta) &-& KeVmarAja kaqSaNxdAsf & muMbayi, 1965\\
+{\bf 78. visheV.parx.} & visheVSAthaR parxkAshikA (mAyideVva)\newline (kananxDAnuvAda sahita) &-& saM. paM. veY. nAgeVsha shAsitxrXV & shirxV muruGAmaTha\newline dhAravADa, 1961\\
+{\bf 79. viV.A.u.} & viVrAgamoVtatxramf (BAga-1) &-& saM. DA. ecf.pi. malelxVdeVvaru & pArxcayx vidAyx saMshoVdhanAlaya\newline meYsUru, 1988\\
+{\bf 80. viV.A.kw.} & viVrasheYvAcAra kwsutxBaH\newline hasatxparxti, saM. pi. 7352 &-& mwnapapx paMDita & pArxcayx vidAyx saMshoVdhanAlaya\newline meYsUru\\
+{\bf 81. viV.A.caM.} & viVrasheYvAnaMdacaMdirxkA (vAdakAMDa)\newline (maritoVMTadAyaR) &-& saM. shirxV soVmeVshavxra shAsitxrXV & shirxV jagadugxru gaMgAdhara saMsakxqqta mahApAThashAlA\newline hubabxLiLx, 1936\\
 %{\bf 101. viV.A.ci} & viVrasheYvAcAraciMtAmaNiH &-& & \\
-{\bf 86. viV.A.parx.} & viVrasheYvAcAraparxdiVpikA\newline hasatxparxti saM. si.25 75/1 &-& gurudeVva & pArxcayx vidAyx saMshoVdhanAlaya\newline meYsUru\\
-{\bf 87. viV.u.parx.} & viVrasheYvoVtakxSaRparxdiVpikA &-& hAlapaTaTxNada cenanxbasavasAvxmi & \hbox{shirxV duraduMDeVshavxra}\-maTha, araBAvi\newline beLagAvi jilelx\newline 1936\\
-{\bf 88. viV.dha.shi.} & viVrasheYvadhamaRshiroVmaNiH\newline (kananxDa vAyxKAyxnasahita) &-& (vAyx) eM. basavaliMga shAsitxrXV & viVrasheYvagarxMtha parxkAshikA garxMthAvali\newline meYsUru, 1908\\
+{\bf 82. viV.A.parx.} & viVrasheYvAcAraparxdiVpikA\newline hasatxparxti saM. si.25 75/1 &-& gurudeVva & pArxcayx vidAyx saMshoVdhanAlaya\newline meYsUru\\
+{\bf 83. viV.u.parx.} & viVrasheYvoVtakxSaRparxdiVpikA &-& hAlapaTaTxNada cenanxbasavasAvxmi & \hbox{shirxV duraduMDeVshavxra}\-maTha, araBAvi\newline beLagAvi jilelx\newline 1936\\
+{\bf 84. viV.dha.shi.} & viVrasheYvadhamaRshiroVmaNiH\newline (kananxDa vAyxKAyxnasahita) &-& vAyx. eM. basavaliMga shAsitxrXV & viVrasheYvagarxMtha parxkAshikA garxMthAvali\newline meYsUru, 1908\\
 %{\bf 105. viV.pu.} & viVraBadarxpurANamf &-& & \\
 %{\bf 106. viV.parx.} & viVrasheYva parxdiVpikA &-& & shirxV jayacAmarAjeVMdarx garxMthamAlA\newline meYsUru, 1918\\
 %{\bf 107. viV.BA.} & viVrasheYvaBASayxmf &-& & \\
-{\bf 89. viVra.} & viVrAgama (kananxDa vAyxKAyxnasahita) &-& (saM) DA. ja.ca.ni. & shirxV jagadugxru paMcAcAyaR seVvA saMGa\newline gadaga-beTageVri\newline 1962\\
+{\bf 85. viVra.} & viVrAgama (kananxDa vAyxKAyxnasahita) &-& saM. DA. ja.ca.ni. & shirxV jagadugxru paMcAcAyaR seVvA saMGa\newline gadaga-beTageVri\newline 1962\\
 %{\bf 109. viVra.u.} & viVrAgamoVpaniSatf &-& & \\
-{\bf 90. viV.mA.saM.} & viVramAheVshavxrAcArasaMgarxha :\newline (BAga-1) (niVlakaMTha\newline nAganAthAcAyaR viracita) &-& (saM.) eM.esf. basavarAjayayx & pArxcayx vidAyx saMshoVdhanAlaya\newline meYsUru, 1991\\
-{\bf 91. viV.sheY.u.} & viVrasheYvoVpaniSatf &-& paM. kAshiVnAtha shAsitxrXV & paMcAcAyaR perxsf\newline meYsUru, 1981 (ELaneya Avaqtitx)\\
-{\bf 92. viV.sa.saM.} & viVrasheYva sadAcAra saMgarxha\newline (kananxDAnuvAda sahita) &-& (saM) paM. basavarAjashAsitxrXV pagaDadininxmaTha & shirxV jagadugxru garxMtha parxkAshikA garxMthAvali\newline mUrusAvira maTha\newline hubabxLiLx, 1964\\
+{\bf 86. viV.mA.saM.} & viVramAheVshavxrAcArasaMgarxha :\newline (BAga-1) (niVlakaMTha\newline nAganAthAcAyaR viracita) &-& saM. eM.esf. basavarAjayayx & pArxcayx vidAyx saMshoVdhanAlaya\newline meYsUru, 1991\\
+{\bf 87. viV.sheY.u.} & viVrasheYvoVpaniSatf &-& paM. kAshiVnAtha shAsitxrXV & paMcAcAyaR perxsf\newline meYsUru, 1981 (ELaneya Avaqtitx)\\
+{\bf 88. viV.sa.saM.} & viVrasheYva sadAcAra saMgarxha\newline (kananxDAnuvAda sahita) &-& saM. paM. basavarAjashAsitxrXV pagaDadininxmaTha & shirxV jagadugxru garxMtha parxkAshikA garxMthAvali\newline mUrusAvira maTha\newline hubabxLiLx, 1964\\
 %{\bf 113. veV.ciM.} & veVdAMtaciMtAmaNiH &-& & \\
-{\bf 93. veV.sA.u.} & veVdAMtasAroVpaniSatf\newline (sheYvoVpaniSatasxMgarxhaH) &-& paM. kAshiVnAtha shAsitxrXV & paMcAcAyaR perxsf\newline meYsUru, 1948 (divxtiVyAvaqtitx)\\
-{\bf 94. veV.sA.viV.caM.} & veVdAMtasAraviVrasheYvaciMtAmaNi\newline (utatxrakAMDa)\newline (niTUTxru \hbox{naMja\-NAyaR})\newline (marAThi anuvAda sahita) &-& (saM) shirxV malilxkAjuRna shAsitxrXV & shirxV datatxparxsAda\newline siTxVmf perxsf\newline soVlApura, 1908\\
-{\bf 95. veY.shiva.} & veYdika shivapUjA vidhi &-& paM. kAshiVnAtha shAsitxrXV & paMcAcAyaR perxsf\newline meYsUru, 1980 (eMTaneya Avaqtitx)\\
-{\bf 96. shaM.saM.} & shaMkarasaMhitA\newline (sakxMdapurANaMtagaRta) &-& (saM) KeVmarAja shirxVkaqSaNxdAsf & muMbayi, vi.saM. 1935\\
-{\bf 97. sha.u.} & sharaBoVpaniSatf\newline (upaniSatasxMgarxha) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAlf banArasidAsf\newline dehali, 1970\\
-{\bf 98. sha.kw.} & shabAdxthaRkwsutxBaH\newline (saMsakxqqta-kananxDa niGaMTu)\newline (BAga 1-6) &-& cakarxvatiR shirxVnivAsa rAjagoVpAlAcAyaR & bApokxV parxkAshana\newline beMgaLUru, 1999\\
-{\bf 99. shakitx.vi.} & shakitxvishiSATxdevxYta tatatxvXtarxya vimasheR\newline (kananxDAnuvAda) &-& DA. si. shivakumArasAvxmi & rAjayx patArxgAra ilAKe\newline (kanARTaka sakARra)\newline beMgaLUru, 2009\\
-{\bf 100. shata.tarx.} & shatakatarxyamf (mAyideVva) &-& paM. veY. nAgeVsha shAsitxrXV & muruGAmaTha\newline dhAravADa, 1964\\
-{\bf 101. sha.vi.da.} & shakitxvishiSATxdevxYtadashaRnamf &-& DA. Ti.ji. sidadhxpApxrAdhayx & gubibx shirxV cenanxbasaveVshavxra garxMthamAlA\newline meYsUru, 1934\\
-{\bf 102. shA.BA.} & shAMkaraBASayxmf\newline (barxhamxsUtarx) &-& niNaRyasAgarf perxsf & muMbayi, 1909\\
-{\bf 103. shi.ta.ra.} & shivatatatxvXratAnxkaraH\newline (keLadi basavaBUpAla) &-& pArxcayx vidAyx saMshoVdhanAlaya & meYsUru, BAga-1 (1964), BAga-2 (1969), BAga-3 (1975)\\
-{\bf 104. shi.da.} & shivAdevxYtadapaRNaH\newline (kananxDAnuvAda sahita) &-& (1) pUvalilxV baqhanamxTha garxMthamAle,\newline \,\phantom{\quad~~} hUli, 1928\newline (2) vidAvxnf bi. rAjasheVKarayayx & shirxV jagadugxru raMBApuriVshavxra\newline garxMtha parxkAshana\newline hubabxLiLx, 2017\\
-{\bf 105. shi.maM.} & shivAdevxYtamaMjariV \hbox{(savxparxBAnaMda shivAcAyaR)}\newline (kananxDa vAyxKAyxnasahita) &-& shirxV rAmAnuja ayayxMgArf & paMcAcAyaR perxsf\newline meYsUru, 1929\\
-{\bf 106. shi.mA.pU} & shivamAnasapUjAsotxVtarxmf\newline (shaMkarAcAyaR viracita)\newline veYdika shivapUjA vidhi, &-&  kAshiVnAtha shAsitxrXV & paMcAcAyaR perxsf\newline meYsUru, 1988\\
-{\bf 107. shi.yoV.parx.} & shivayoVgaparxdiVpikA\newline (\hbox{cenanxsadAshiva\-yoVgi})\newline (kananxDa TiVkAsahita) &-& TiVkAkAra: basavArAdhayx & kananxDa adhayxyana piVTha, kanARTaka vishavxvidAyxlaya\newline dhAravADa, 1976\\
+{\bf 89. veV.sA.u.} & veVdAMtasAroVpaniSatf\newline (sheYvoVpaniSatasxMgarxhaH) &-& paM. kAshiVnAtha shAsitxrXV & paMcAcAyaR perxsf\newline meYsUru, 1948 (divxtiVyAvaqtitx)\\
+{\bf 90. veV.sA.viV.caM.} & veVdAMtasAraviVrasheYvaciMtAmaNi\newline (utatxrakAMDa)\newline (niTUTxru \hbox{naMja\-NAyaR})\newline (marAThi anuvAda sahita) &-& saM. shirxV malilxkAjuRna shAsitxrXV & shirxV datatxparxsAda\newline siTxVmf perxsf\newline soVlApura, 1908\\
+{\bf 91. veY.shiva.} & veYdika shivapUjA vidhi &-& paM. kAshiVnAtha shAsitxrXV & paMcAcAyaR perxsf\newline meYsUru, 1980 (eMTaneya Avaqtitx)\\
+{\bf 92. shaM.saM.} & shaMkarasaMhitA\newline (sakxMdapurANaMtagaRta) &-& saM. KeVmarAja shirxVkaqSaNxdAsf & muMbayi, vi.saM. 1935\\
+{\bf 93. sha.u.} & sharaBoVpaniSatf\newline (upaniSatasxMgarxha) &-& saM. paM. jagadiVsha shAsitxrXV & moVtilAlf banArasidAsf\newline dehali, 1970\\
+{\bf 94. sha.kw.} & shabAdxthaRkwsutxBaH\newline (saMsakxqqta-kananxDa niGaMTu)\newline (BAga 1-6) &-& cakarxvatiR shirxVnivAsa rAjagoVpAlAcAyaR & bApokxV parxkAshana\newline beMgaLUru, 1999\\
+{\bf 95. shakitx.vi.} & shakitxvishiSATxdevxYta tatatxvXtarxya vimasheR\newline (kananxDAnuvAda) &-& DA. si. shivakumArasAvxmi & rAjayx patArxgAra ilAKe\newline (kanARTaka sakARra)\newline beMgaLUru, 2009\\
+{\bf 96. shata.tarx.} & shatakatarxyamf (mAyideVva) &-& paM. veY. nAgeVsha shAsitxrXV & muruGAmaTha\newline dhAravADa, 1964\\
+{\bf 97. sha.vi.da.} & shakitxvishiSATxdevxYtadashaRnamf &-& DA. Ti.ji. sidadhxpApxrAdhayx & gubibx shirxV cenanxbasaveVshavxra garxMthamAlA\newline meYsUru, 1934\\
+{\bf 98. shi.ta.ra.} & shivatatatxvXratAnxkaraH\newline (keLadi basavaBUpAla) &-& porx. malelxVpuraM ji. veMkaTeVshf & haMpi vishavxvidAyxlaya\newline meYsUru, BAga-1 (1964), BAga-2 (1969), BAga-3 (1975)\\
+{\bf 99. shi.da.} & shivAdevxYtadapaRNaH\newline (kananxDAnuvAda sahita) &-& vidAvxnf bi. rAjasheVKarayayx & shirxV jagadugxru raMBApuriVshavxra\newline garxMtha parxkAshana\newline hubabxLiLx, 2017\\
+{\bf 100. shi.maM.} & shivAdevxYtamaMjariV \hbox{(savxparxBAnaMda shivAcAyaR)}\newline (kananxDa vAyxKAyxnasahita) &-& shirxV rAmAnuja ayayxMgArf & paMcAcAyaR perxsf\newline meYsUru, 1929\\
+{\bf 101. shi.mA.pU} & shivamAnasapUjAsotxVtarxmf\newline (shaMkarAcAyaR viracita)\newline veYdika shivapUjA vidhi, &-&  kAshiVnAtha shAsitxrXV & paMcAcAyaR perxsf\newline meYsUru, 1988\\
+{\bf 102. shi.yoV.parx.} & shivayoVgaparxdiVpikA\newline (\hbox{cenanxsadAshiva\-yoVgi})\newline (kananxDa TiVkAsahita) &-& TiV. basavArAdhayx & kananxDa adhayxyana piVTha, kanARTaka vishavxvidAyxlaya\newline dhAravADa, 1976\\
 %{\bf 129. shi.ra.} & shivarahasayxmf &-& &\\
-{\bf 108. shiva.shi.} & shivAdhikayxshiKAmaNiH\newline (soVsale \hbox{reVvaNArAdhayx}) &-& (saM) shirxV soVmasheVKarasAvxmi & namaHshivAya maTha\newline meYsUru, 1929\\
-{\bf 109. shivA.sw.} & shivAgamaswraBamf  &-& (saM) vidAvxnf eM.ji. naMjuMDArAdhayx & shirxV ja.ca.ni. adhayxyana piVTha, beMgaLUru\newline 1985\\
+{\bf 103. shiva.shi.} & shivAdhikayxshiKAmaNiH\newline (soVsale \hbox{reVvaNArAdhayx}) &-& saM. shirxV soVmasheVKarasAvxmi & namaHshivAya maTha\newline meYsUru, 1929\\
+{\bf 104. shivA.sw.} & shivAgamaswraBamf  &-& saM. vidAvxnf eM.ji. naMjuMDArAdhayx & shirxV ja.ca.ni. adhayxyana piVTha, beMgaLUru\newline 1985\\
 %{\bf 132. shi.sU.} & shivasUtarxmf &-& & kAshimxVra saMsakxqqta garxMthAvali\newline shirxVnagara, 1968\\
 %{\bf 133. shu.ya.veV.} & shukalxyajuveVRdaH &-& & veYdika saMshoVdhana maMDaLi\newline puNe\\
-{\bf 110. sheY.i.ta.} & \hbox{sheYvadashaRna itihAsa matutx}\newline tatatxvXparxkAsha (BoVjarAja viracita) &-& (saM) vidAvxnf eM.ji. naMjuMDArAdhayx & parxboVdha garxMthamAlA\newline meYsUru, 1974\\
-{\bf 111. sheY.u.} & sheYvoVpaniSatf &-& (saM) paM. mahAdeVvashAsitxrXV & aDAyxrf leYbarxri\newline madArxsf, 1925\\
-{\bf 112. sheY.pa.} & sheYvapariBASA\newline (shivAgarxyoVgiVMdarxjAcnxna\newline shivAcAyaR) &-& (saM) ecf.Arf. raMgasAvxmi ayayxMgArf & sakARri mudarxNAlaya\newline meYsUru, 1950\\
-{\bf 113. sheY.ra.} & \hbox{sheYvaratAnxkaraH (joyxVtinARtha)}\newline (BAga-1) &-& (saM) DA. si.enf. basavarAju & pArxcayx vidAyx saMshoVdhanAlaya\newline meYsUru, 1992\\
-{\bf 114. sheY.ra.}  & \hbox{sheYvaratAnxkaraH (joyxVtinARtha)}\newline (BAga-2) &-& (saM) malilxkAjuRna shAsitxrXV & liMgi bArxhamxNa garxMthamAlA\newline soVlApura, 1909\\
-{\bf 115. sheY.si.diV.} & sheYvasidAdhxMtadiVpikA\newline (mAheVshavxra) &-& (saM) pi.Arf. karibasavashAsitxrXV & shaMkaravilAsa perxsf\newline meYsUru, 1907\\
-{\bf 116. shurxti.sA.} & shurxtisAraBASayxmf\newline (\hbox{shirxV shivapUjAshivaliMga}\newline shivayoVgiVMdarx) &-& (saM) DA. Ti.ji. sidadxpApxrAdhayx & pArxcayx vidAyx saMshoVdhanAlaya\newline meYsUru, 1913\\
-{\bf 117. shirxV.BA.} & shirxVkaraBASayxmf (shirxVpatipaMDita) &-& (saM) DA. Ti.ji. sidadxpApxrAdhayx & pArxcayx vidAyx saMshoVdhanAlaya\newline meYsUru (BAga-1, 1977), (BAga-2, 1978)\\
-{\bf 118. shevxVtA.u.} & shevxVtAshavxtaroVpaniSatf\newline (viVrasheYvaBASoyxVpeVtA) &-& DA. Ti.ji. sidadxpApxrAdhayx & shirxV muruGAmaTha\newline citarxdugaR, 1965\\
-{\bf 119. sa.u.} & sadAnaMdoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAlf banArasidAsf\newline dehali, 1980\\
-{\bf 120. sa.da.saM.} & savaRdashaRnasaMgarxhaH\newline (mAdhavAcAyaR) &-& (saM) DA. imamxDi shivabasavasAvxmigaLu & kananxDa adhayxyana piVTha, kanARTaka vishavxvidAyxlaya\newline dhAravADa, 1976\\
-{\bf 121. sa.pa.sholxV.} & savAyxKAyx paMcasholxVkiV\newline (keLadi basavarAja) &-& (saM) basavaliMga shAsitxrXV & enf.Arf. karibasava shAsitxrXV\newline meYsUru, 1912\\
-{\bf 122. si.shi.} & sidAdhxMtashiKAmaNiH\newline (shivayoVgi shivAcAyaR) &-& (saM) DA. caMdarxsheVKara shivAcAyaR mahAsAvxmigaLu & viVrasheYva sAhitayx saMshoVdhana maMDaLa\newline soVlApura, 1990\\
-{\bf 123. sU.A.} & sUkASxmXgamaH (kananxDAnuvAda) &-& SaNumxKayayx akUkxramaTha & viVrasheYva anusaMdhAna saMsAthxna\newline beMgaLUru, 2001\\
+{\bf 105. sheY.i.ta.} & \hbox{sheYvadashaRna itihAsa matutx}\newline tatatxvXparxkAsha (BoVjarAja viracita) &-& saM. vidAvxnf eM.ji. naMjuMDArAdhayx & parxboVdha garxMthamAlA\newline meYsUru, 1974\\
+{\bf 106. sheY.u.} & sheYvoVpaniSatf &-& (saM) paM. mahAdeVvashAsitxrXV & aDAyxrf leYbarxri\newline madArxsf, 1925\\
+{\bf 107. sheY.pa.} & sheYvapariBASA\newline (shivAgarxyoVgiVMdarxjAcnxna\newline shivAcAyaR) &-& saM. ecf.Arf. raMgasAvxmi ayayxMgArf & sakARri mudarxNAlaya\newline meYsUru, 1950\\
+{\bf 108. sheY.ra.} & \hbox{sheYvaratAnxkaraH (joyxVtinARtha)}\newline (BAga-1) &-& saM. DA. si.enf. basavarAju & pArxcayx vidAyx saMshoVdhanAlaya\newline meYsUru, 1992\\
+{\bf 109. sheY.ra.}  & \hbox{sheYvaratAnxkaraH (joyxVtinARtha)}\newline (BAga-2) &-& saM. malilxkAjuRna shAsitxrXV & liMgi bArxhamxNa garxMthamAlA\newline soVlApura, 1909\\
+{\bf 110. sheY.si.diV.} & sheYvasidAdhxMtadiVpikA\newline (mAheVshavxra) &-& saM. pi.Arf. karibasavashAsitxrXV & shaMkaravilAsa perxsf\newline meYsUru, 1907\\
+{\bf 111. shurxti.sA.} & shurxtisAraBASayxmf\newline (\hbox{shirxV shivapUjAshivaliMga}\newline shivayoVgiVMdarx) &-& saM. DA. Ti.ji. sidadxpApxrAdhayx & pArxcayx vidAyx saMshoVdhanAlaya\newline meYsUru, 1913\\
+{\bf 112. shirxV.BA.} & shirxVkaraBASayxmf (shirxVpatipaMDita) &-& saM. DA. Ti.ji. sidadxpApxrAdhayx & pArxcayx vidAyx saMshoVdhanAlaya\newline meYsUru (BAga-1, 1977), (BAga-2, 1978)\\
+{\bf 113. shevxVtA.u.} & shevxVtAshavxtaroVpaniSatf\newline (viVrasheYvaBASoyxVpeVtA) &-& DA. Ti.ji. sidadxpApxrAdhayx & shirxV muruGAmaTha\newline citarxdugaR, 1965\\
+{\bf 114. sa.u.} & sadAnaMdoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& saM. paM. jagadiVsha shAsitxrXV & moVtilAlf banArasidAsf\newline dehali, 1980\\
+{\bf 115. sa.da.saM.} & savaRdashaRnasaMgarxhaH\newline (mAdhavAcAyaR) &-& saM. DA. imamxDi shivabasavasAvxmigaLu & kananxDa adhayxyana piVTha, kanARTaka vishavxvidAyxlaya\newline dhAravADa, 1976\\
+{\bf 116. sa.pa.sholxV.} & savAyxKAyx paMcasholxVkiV\newline (keLadi basavarAja) &-& saM. basavaliMga shAsitxrXV & enf.Arf. karibasava shAsitxrXV\newline meYsUru, 1912\\
+{\bf 117. si.shi.} & sidAdhxMtashiKAmaNiH\newline (shivayoVgi shivAcAyaR) &-& saM. DA. caMdarxsheVKara shivAcAyaR mahAsAvxmigaLu & viVrasheYva sAhitayx saMshoVdhana maMDaLa\newline soVlApura, 1990\\
+{\bf 118. sU.A.} & sUkASxmXgamaH (kananxDAnuvAda) &-& SaNumxKayayx akUkxramaTha & viVrasheYva anusaMdhAna saMsAthxna\newline beMgaLUru, 2001\\
 %\hline
 \end{longtable}}
 
