anubandha correction is complete

--- a/tex-for-print/anubandha-4.tex
+++ b/tex-for-print/anubandha-4.tex
@@ -24,7 +24,7 @@
 {\bf 3. aBi.shA.} & aBijAcnxna shAkuMtala (kAlidAsa)\newline (kananxDAnuvAda sahita) &-& saM. porx. ke.Ti. pAMDuraMgi &  beMgaLUru vishavxvidAyxlaya\newline beMgaLUru, 1978\\
 {\bf 4. a.koV.} &  amarakoVsha (amarasiMha)\newline (sudhA vAyxKoyxVpeVtaH) &-& vAyx. shirxV BAnoVji diVkiSxta & cwKaMbA saMsakxqqta parxtiSAThxna, navadehali (divx.mu), 1978\\
 {\bf 5. amaq.Bi.} & amaqtabiMdUpaniSatf\newline (upaniSatasxMgarxhaH) &-& saM. paM. jagadiVsha shAsitxrXV & moVtilAlf banArasidAsf\newline  dehali, 1980\\
-{\bf 6. aSATx.} & aSATxdhAyxyiV sUtarxpATha\newline (pANini) &-& (saM.) sAvxmiV parxhAlxda giri veVdAMtakeVsari & kaqSaNxdAsa akAdemi\newline dehali, (divx.mu)\newline 1987\\
+{\bf 6. aSATx.} & aSATxdhAyxyiV sUtarxpATha\newline (pANini) &-& saM. sAvxmiV parxhAlxda giri veVdAMtakeVsari & kaqSaNxdAsa akAdemi\newline dehali, (divx.mu)\newline 1987\\
 {\bf 7. a.viV.sA.saM.} &  anAdiviVrasheYvasArasaMgarxha (BA-1) (kananxDa vAyxKAyxnasahita) &-& saMpAdaneya sidadhxviVraNaNx shivayoVgi\newline saM. ji.e. shivaliMgayayx & basava samiti\newline beMgaLUru, 1999\\
 %2. & anAdivivrasheYvasArasaMgarxha : (BA-1) &-& saM. maNUra maThAdhayxkaSx malilxkAjuRnashAsitxrXV, viVrasheYva liMgibArxhamxNa garxMthamAlA, soVlApura, 1905\\
 {\bf 8. a.viV.sA.saM.} & anAdiviVrasheYvasArasaMgarxha (BA-2) (kananxDa vAyxKAyxnasahita) &-& parx.saM. DA. si. shivakumArasAvxmi & viVrasheYva sAhitayx parxtiSAThxna\newline viBUtipura maTha\newline beMgaLUru, 2005\\
